--- a/views/signinuser.handlebars
+++ b/views/signinuser.handlebars
@@ -1,6 +1,6 @@
 <h2>Sign In</h2>
 
-<form id="signin-form" name="signin-form" method="post" action="/signinuser">
+<form id="signin-form" name="signin-form" method="post" action="/users/signinuser">
     <label for="user_name">Enter Your Username<br></label>
     <input type="text" name="user_name" id="user_name"/><br>
 
