--- a/views/groupProfile.handlebars
+++ b/views/groupProfile.handlebars
@@ -1,20 +1,21 @@
+<!--TODO-->
 <h2>{{groupName}}</h2>
 
 <main>
     <h4>Stories</h4>
     <ul>
-        {{}}
+        {{h}}
     </ul>
 
     <h4>Members</h4>
     <ul>
-        {{}}
+        {{h}}
     </ul>
 
     {{#if isOwner}}
     <h4>Invite</h4>
     <form>
-        <>
+        
     </form>
     {{/if}}
 
