--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
       </div>
       {{else}}
       <div id="signInLink">
-        <a href="/signinuser">Sign in</a>
+        <a href="/users/signinuser">Sign in</a>
       </div>
       {{/if}}
     </nav>
