--- a/views/signinuser.handlebars
+++ b/views/signinuser.handlebars
@@ -29,4 +29,4 @@
 
 <div id="clientError" class="error" hidden>I'm an error passed down through Client-Side JS.</div>
 
-<a href="/signupuser">Click here to signup!</a>
+<a href="/users/signupuser">Click here to signup!</a>
