--- a/views/signupuser.handlebars
+++ b/views/signupuser.handlebars
@@ -32,4 +32,4 @@
 
 <div id="clientError" class="error" hidden>I'm an error passed down through Client-Side JS.</div>
 
-<a href="/signinuser">Already have an account? Click here to sign-in</a>
+<a href="/users/signinuser">Already have an account? Click here to sign-in</a>
