--- a/views/readstory.handlebars
+++ b/views/readstory.handlebars
@@ -3,7 +3,7 @@
     <img src="{{imglink}}">
     <h3>{{{authors}}}</h3>
     <p>description: {{description}}</p>
-    <div id="jumplinks">
+    <div id="jumplinks" class="fixed">
         {{{jump_links}}}
     </div>
     <div>
