--- a/views/signupuser.handlebars
+++ b/views/signupuser.handlebars
@@ -1,6 +1,6 @@
 <h2>Sign Up</h2>
 
-<form id="signup-form" name="signup-form" method="post" action="/signupuser">
+<form id="signup-form" name="signup-form" method="post" action="/users/signupuser">
     <label for="username">Enter Your Username<br></label>
     <input type="text" name="username" id="username"><br>
 
