--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/public/css/stories.css">
+    <link rel="stories" href="/public/css/stories.css">
 
     <nav>
       <a href="/">Home</a>
@@ -24,7 +24,7 @@
 <body>
     {{{body}}}
 
-    <script src='/public/js/form_validate.js'></script>
+    <!--<script src='/public/js/form_validate.js'></script>-->
 </body>
 
 
