download story as txt + view profile frontend

--- a/views/readstory.handlebars
+++ b/views/readstory.handlebars
@@ -26,4 +26,7 @@
         </select>
         <button>Submit</button>
     </form>
+    <div>
+        <a href="/stories/{{storyId}}/download" class="download-btn">Download Story</a>
+    </div>
 </main>
