--- a/public/css/stories.css
+++ b/public/css/stories.css
@@ -11,3 +11,12 @@ img.profilePicture{
     height: 25px;
     width: 25px;
 }
+
+.user-profile h2{
+    display: inline;
+}
+
+.user-profile .pfp{
+    height: 75px;
+    width: 75px;
+}
