--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/public/css/stories.css">
+    <link rel="stylesheet" type="text/css" href="/public/css/stories.css">
 </head>
 
 <body>
