--- a/public/css/stories.css
+++ b/public/css/stories.css
@@ -20,3 +20,17 @@ img.profilePicture{
     height: 75px;
     width: 75px;
 }
+
+.storycard{
+    width: 20%;
+    padding: 0.5%;
+    background-color: lightblue;
+}
+
+.feed{
+    width: 100%;
+    padding: 0.5%;
+    display: flex;
+    flex-direction: row;
+    gap:5%;
+}
