Client Side Sign in Form WIP

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,9 @@
 
     {{{body}}}
 
-    <!--<script src='/public/js/form_validate.js'></script>-->
+    <script src="https://code.jquery.com/jquery-3.6.4.js"
+        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    <script src='/public/js/form_validate.js'></script>
 </body>
 
 
