--- a/public/css/stories.css
+++ b/public/css/stories.css
@@ -8,6 +8,11 @@ img.profilePicture{
     width: 25px;
 }
 
+img{
+    max-height: 100px;
+    max-width: 100px;
+}
+
 .error{
     color:salmon;
     background-color: gray;
