updated fetch that creates stories

--- a/views/editstory.handlebars
+++ b/views/editstory.handlebars
@@ -1,5 +1,7 @@
 <section>
     <form id="StoryEditor">
+        <label for="Title">Title</label>
+        <input id="Title" name="Title" type="text" value={{title}}></Title>
         <div>
             <div id="jumplinks" class="fixed">
                 Table of Contents
