--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,9 @@
+  
+  <form action="/stories/" method="POST">
+    <button>Write</button>
+  </form>
+
+
   <h2>Home</h2>
 
   <form action="/stories/search" method="GET" id="searchBar" class="storySearch">
