--- a/views/editstory.handlebars
+++ b/views/editstory.handlebars
@@ -13,6 +13,7 @@
                 <ol>
                     {{{chapters}}}
                 </ol>
+                <form id="addchapter" name="addchapter"><input type="submit" value="Add Chapter"/></form>
             </div>
         </div>
     </form>
