--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -110,7 +110,7 @@
         <div class="storycard">
           <a href="/stories/{{_id}}">
             <h5>{{Title}}</h5>
-            <img src="{{Picture}}" alt="Book Picture">
+            <img src="{{Picture}}" alt="Picture of Book {{Title}}">
           </a>
           <h6>By: {{Author}}</h6>
           <p>
@@ -130,7 +130,7 @@
         <div class="storycard">
           <a href="/stories/{{_id}}">
             <h5>{{Title}}</h5>
-            <img src="{{Picture}}" alt="Book Picture">
+            <img src="{{Picture}}" alt="Picture of Book {{Title}}">
           </a>
           <h6>By: {{Author}}</h6>
           <p>
@@ -150,7 +150,7 @@
         <div class="storycard">
           <a href="/stories/{{_id}}">
             <h5>{{Title}}</h5>
-            <img src="{{Picture}}" alt="Book Picture">
+            <img src="{{Picture}}" alt="Picture of Book {{Title}}">
           </a>
           <h6>By: {{Author}}</h6>
           <p>
