--- a/views/signinuser.handlebars
+++ b/views/signinuser.handlebars
@@ -2,10 +2,10 @@
 
 <form id="signin-form" name="signin-form" method="post" action="/users/signinuser">
     <label for="user_name">Enter Your Username<br></label>
-    <input type="text" name="user_name" id="user_name"/><br>
+    <input type="text" name="user_name" id="user_name"><br>
 
     <label for="password">Enter Your Password</label><br>
-    <input type="password" name="password" id="password"/><br>
+    <input type="password" name="password" id="password"><br>
 
     <button type="submit" name="submit_button" id="submit_button">Submit</button>
 </form>
