--- a/views/editstory.handlebars
+++ b/views/editstory.handlebars
@@ -1,5 +1,5 @@
 <section>
-    <form id="StoryEditor">
+    <form id="StoryEditor" name="StoryEditor" method="POST" action="/stories/{{reqid}}/edit">
         <label for="Title">Title</label>
         <input id="Title" name="Title" type="text" value={{title}}></Title>
         <div>
