--- a/views/editstory.handlebars
+++ b/views/editstory.handlebars
@@ -2,6 +2,8 @@
     <form id="StoryEditor" name="StoryEditor" method="POST" action="/stories/{{reqid}}/edit">
         <label for="Title">Title</label>
         <input id="Title" name="Title" type="text" value={{title}}></Title>
+        <label for="Description">Description</label>
+        <textarea name="Description" rows="10" cols="10"> </textArea>
         <div>
             <div id="jumplinks" class="fixed">
                 Table of Contents
